--- a/Lab2/Code/electron-app/package.json
+++ b/Lab2/Code/electron-app/package.json
@@ -14,7 +14,7 @@
   "keywords": [],
   "author": {
     "name": "yahellio",
-    "email": "you@example.com"
+    "email": "yayakn1h@gmail.com"
   },
   "license": "MIT",
   "dependencies": {
