--- a/Lab2/Code/electron-app/package.json
+++ b/Lab2/Code/electron-app/package.json
@@ -9,16 +9,25 @@
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
-    "lint": "echo \"No linting configured\""
+    "lint": "echo \"No linting configured\"",
+    "build": "electron-builder"
   },
-  "keywords": [],
-  "author": {
-    "name": "yahellio",
-    "email": "yayakn1h@gmail.com"
-  },
-  "license": "MIT",
-  "dependencies": {
-    "electron-squirrel-startup": "^1.0.1"
+  "build": {
+    "appId": "com.example.myapp",
+    "productName": "MyApp",
+    "files": [
+      "src/**/*",
+      "node_modules/**/*",
+      "package.json",
+      "src/ffmpeg.dll"
+    ],
+    "directories": {
+      "output": "release"
+    },
+
+    "win": {
+      "target": "nsis"
+    }
   },
   "devDependencies": {
     "@electron-forge/cli": "^7.7.0",
@@ -29,6 +38,10 @@
     "@electron-forge/plugin-auto-unpack-natives": "^7.7.0",
     "@electron-forge/plugin-fuses": "^7.7.0",
     "@electron/fuses": "^1.8.0",
-    "electron": "35.0.3"
+    "electron": "34.2.0",
+    "electron-builder": "^25.1.8"
+  },
+  "dependencies": {
+    "electron-squirrel-startup": "^1.0.1"
   }
 }
